doplneny tenantID a AppType

--- a/starter/ContosoDentistryChatBot/.env
+++ b/starter/ContosoDentistryChatBot/.env
@@ -8,5 +8,7 @@ LUIS_API_KEY=
 LUIS_API_HOST_NAME=
 
 SCHEDULER_API_URL=https://__YOUR_SCHEDULER__.azurewebsites.net/api/schedule
+MicrosoftAppType=SingleTenant
 MicrosoftAppId=b1ec1301-b1ed-41de-bace-510b433b2d51
 MicrosoftAppPassword=LTL8Q~vrO3KXSWpS3s0u6AIoS5rr8uPUS3hSscBC
+MicrosoftTenantId=3134e972-6a32-4afd-817c-c2cfb0001dd8
